--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-google-cloud-secret-manager==2.0.0
-Jinja2==2.10.3
-psycopg2-binary==2.8.4
+google-cloud-secret-manager==2.1.0
+Jinja2==2.11.2
+psycopg2-binary==2.8.6
 python-json-logger==0.1.11
-requests==2.22.0
+requests==2.25.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
-SQLAlchemy==1.3.12
-pandas_gbq
-google-cloud-pubsub
+SQLAlchemy==1.3.20
+pandas-gbq==0.14.1
+google-cloud-pubsub==2.2.0
+flask==1.1.2
+pandas==1.2.2
